# P-of-Geo-Meas

./: .gitignore  1.txt  =0.4.6  README.md  debug_height_diff.py  debug_parsing.py  test_app_launch.py  test_leveling_gsi.txt
GeoAdjustPro/: .gitignore  BUGFIXES_2026-03-26.md  BUILD_EXE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CHANGES_SUMMARY.md  CORRECTIONS_REPORT.md  CORRECTIONS_SUMMARY.md  DYNADJUST_IMPROVEMENTS.md  FULL_FUNCTIONALITY_SUMMARY.md  GUI_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT.md  INSTALL.md  INSTALL.txt  MANIFEST.in  P-of-Geo-Meas.iss  README.md  TESTING_GUIDE_RU.md  VERSION  check_deps.py  create_placeholder_icons.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  setup.py  test_adjustment_real_data.py  test_all_adjustment_methods.py  test_all_functions.py  test_full_integration.py  test_pos_parser.py  test_real_data_parsers.py  test_summary.md  РУКОВОДСТВО_ПОЛЬЗОВАТЕЛЯ.md
GeoAdjustPro/examples/: comprehensive_test.py  full_system_test.py  test_new_modules.py
GeoAdjustPro/resources/crs_database/: russian_crs_params.yaml
GeoAdjustPro/resources/styles/: styles.qss
GeoAdjustPro/scripts/: build_release.py
GeoAdjustPro/src/geoadjust/: __main__.py  utils.py
GeoAdjustPro/src/geoadjust.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
GeoAdjustPro/src/geoadjust/core/: __init__.py  processing_pipeline.py
GeoAdjustPro/src/geoadjust/core/adjustment/: __init__.py  engine.py  equations_builder.py  free_network.py  instruments.py  robust_methods.py  weight_builder.py
GeoAdjustPro/src/geoadjust/core/analysis/: __init__.py  ellipse_errors.py  gross_errors.py  normative_classes.py  visualization.py
GeoAdjustPro/src/geoadjust/core/network/: models.py
GeoAdjustPro/src/geoadjust/core/preprocessing/: __init__.py  direction_processor.py  module.py  station_processor.py  tolerances.py
GeoAdjustPro/src/geoadjust/core/reliability/: __init__.py  baarda_method.py
GeoAdjustPro/src/geoadjust/crs/: __init__.py  database.py  geoid.py  projection.py  transformer.py
GeoAdjustPro/src/geoadjust/gui/: __init__.py  main_window.py  processing_pipeline.py  project_manager.py  welcome_dialog.py
GeoAdjustPro/src/geoadjust/gui/components/: __init__.py  dock_widgets.py  history_widget.py  log_widget.py  plan_view.py  properties_widget.py  tables.py
GeoAdjustPro/src/geoadjust/gui/dialogs/: __init__.py  export_dialog.py  import_dialog.py  observation_editor.py  point_editor.py  program_settings.py  project_properties.py  project_wizard.py  scheme_viewer.py
GeoAdjustPro/src/geoadjust/gui/models/: __init__.py  observations_model.py  points_model.py
GeoAdjustPro/src/geoadjust/gui/processing/: __init__.py  integration.py  processing_thread.py
GeoAdjustPro/src/geoadjust/gui/resources/styles/: styles.qss
GeoAdjustPro/src/geoadjust/gui/widgets/: __init__.py  observations_table.py  points_table.py  ribbon_widget.py  stations_widget.py
GeoAdjustPro/src/geoadjust/io/export/: __init__.py  dxf_export.py  dynadjust_report.py  gost_report.py
GeoAdjustPro/src/geoadjust/io/formats/: __init__.py  base_parser.py  dat.py  gsi.py  parser_template.py  pos.py  sdr.py  utils.py
GeoAdjustPro/src/geoadjust/io/project/: crs_manager.py  gad_format.py  project_manager.py  results_saver.py
GeoAdjustPro/src/resources/geoid_data/: egm2008_approx.npy  egm2008_approx_meta.json
gui/: __init__.py  main_window.py  project_manager.py  workspace_manager.py
gui/components/: __init__.py  dock_widgets.py
gui/dialogs/: __init__.py  program_settings.py  project_properties.py
gui/models/: __init__.py  points_model.py
gui/widgets/: __init__.py  ribbon_widget.py
test_real/bad_gro/: BADGRO30.GSI
test_real_mes/b_g/niv/: GRO2209.GSI  Ведомость боковых точек нов_PCYjhX.rtf  Ведомость координат нов_xWBZyV.rtf  Ведомость оценки точности нов_KIJQkk.rtf  Ведомость_превышений_и_высот_IV_класс_штативы_нов_CPjcFu.rtf
test_real_mes/b_g/plan/: badgro16093_const.sdr  Ведомость боковых точек нов_MwDFCP.rtf  Ведомость координат нов_jVqMIV.rtf  Ведомость координат_aLnZAW.rtf  Ведомость оценки точности (XY) (заголовок)_ddgrnA.rtf  Ведомость_превышений_и_высот_IV_класс_штативы_нов_IMyOKw.rtf
test_real_mes/b_o/plan/: badokr_const.sdr  Ведомость координат_UBHMbg.rtf  Ведомость оценки точности (XY) (заголовок)_gTZJXX.rtf
test_real_mes/d_d_k/niv/: KOL0708.GSI  Ведомость координат нов_cKsRvd.rtf  Ведомость оценки точности нов_EOEUoc.rtf  Ведомость_превышений_и_высот_IV_класс_штативы_нов_diORnb.rtf
test_real_mes/d_d_o/niv/: DAY1302.GSI  Ведомость боковых точек нов_FMkFcD.rtf  Ведомость оценки точности нов_tWdvjW.rtf  Ведомость_превышений_и_высот_IV_класс_штативы_нов_KrQKeX.rtf
test_real_mes/gnss/: bshm-ramo.pos  drag-bshm.pos  drag-ramo.pos
test_real_mes/k_n/plan/: ntsskotl06022026_const.sdr  Ведомость координат_Wtehko.rtf  Ведомость оценки точности (XY) (заголовок)_mbAOWk.rtf
test_real_mes/l/niv/: Ведомость координат нов_Gssgeo.rtf  Ведомость оценки точности нов_uSaanZ.rtf  Ведомость_превышений_и_высот_IV_класс_штативы_нов_sdJGLY.rtf  (+1 more)
test_real_mes/n_g/niv/: GRO0109.GSI  (+1 more)
tests/io/: test_parsers.py
(+35 files in other folders)
