[tool.poetry]
name = "geoadjust"
version = "1.0.0"
description = "Профессиональная система уравнивания геодезических сетей"
authors = ["GeoAdjust Team <geoadjust@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geoadjust/geoadjust-pro"
repository = "https://github.com/geoadjust/geoadjust-pro"
keywords = ["geodesy", "surveying", "network-adjustment", "gis", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [
    { include = "geoadjust", from = "src" }
]
include = [
    "VERSION",
    "README.md",
    "LICENSE",
    "src/geoadjust/gui/resources/**/*",
    "src/geoadjust/crs/database/*.yaml",
    "src/geoadjust/resources/**/*",
]

[tool.poetry.scripts]
geoadjust = "geoadjust.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
scikit-sparse = ">=0.4.8"
pyproj = ">=3.4.0"
networkx = ">=2.8.0"
PyQt5 = { version = ">=5.15.0", optional = true }
PyQt5-sip = { version = ">=12.8.0", optional = true }
matplotlib = { version = ">=3.5.0", optional = true }
seaborn = { version = ">=0.12.0", optional = true }
python-docx = ">=0.8.11"
openpyxl = ">=3.0.0"
Pillow = ">=9.0.0"
chardet = ">=4.0.0"
requests = ">=2.28.0"
pandas = ">=1.3.0"

[tool.poetry.extras]
gui = ["PyQt5", "PyQt5-sip", "matplotlib", "seaborn"]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=2.0.0"
pytest-qt = { version = ">=4.0.0", optional = true }
flake8 = ">=4.0.0"
mypy = ">=0.931"
black = ">=22.0.0"
isort = ">=5.10.0"
pylint = ">=2.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0.0"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
