[project]
name = "P-of-Geo-Meas"
version = "1.0.0"
description = "Профессиональная система уравнивания геодезических сетей"
authors = [
    { name = "GeoAdjust Team", email = "support@geoadjust.pro" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.13"
keywords = ["geodesy", "adjustment", "surveying", "gis", "геодезия", "уравнивание"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-sparse>=0.4.8",
    "pyproj>=3.4.0",
    "networkx>=2.8.0",
    "PyQt5>=5.15.0",
    "PyQt5-sip>=12.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "Pillow>=9.0.0",
    "chardet>=4.0.0",
    "requests>=2.28.0",
    "pandas>=1.3.0",
    "PyYAML>=6.0",
    "ezdxf>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/geoadjust/P-of-Geo-Meas"
Repository = "https://github.com/geoadjust/P-of-Geo-Meas"

[project.scripts]
pofgeomeas = "geoadjust.__main__:main"
geoadjust = "geoadjust.__main__:main"
build-release = "scripts.build_release:main"

[tool.poetry]
name = "P-of-Geo-Meas"
version = "1.0.0"
packages = [
    { include = "geoadjust", from = "src" }
]
include = [
    "VERSION",
    "README.md",
    "LICENSE",
    "INSTALL.txt",
    "resources/**/*",
    "src/geoadjust/gui/resources/**/*",
    "src/geoadjust/crs/**/*.yaml",
    "src/geoadjust/io/export/templates/**/*",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=2.0.0"
pytest-qt = ">=4.0.0"
flake8 = ">=4.0.0"
mypy = ">=0.931"
black = ">=22.0.0"
isort = ">=5.10.0"
pylint = ">=2.12.0"
pyinstaller = ">=5.13.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0.0"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyinstaller]
name = "P-of-Geo-Meas"
windowed = true
icon = "resources/icons/app_icon.ico"
add-data = [
    "resources;resources",
    "src/geoadjust/crs;crs_database",
    "src/geoadjust/gui/resources;gui/resources",
]
hidden-imports = [
    "PyQt5.QtPrintSupport",
    "PyQt5.QtSvg",
    "scipy.sparse.csgraph._validation",
    "sksparse",
    "sksparse.cholmod",
    "yaml",
    "chardet",
    "docx",
    "matplotlib.backends.backend_qt5agg",
    "pandas._libs",
    "numpy.random._common",
]
